--- a/style.css
+++ b/style.css
@@ -2,17 +2,31 @@
 
 
 
+.icons {
+    width: 100px;
+    border: 1px solid black;
+    background-color: beige;
+    color:darkolivegreen;
+}
+
+.icons img{
+    float: right;
+    clear:right;
+    text-align: center;
+}
+
+
 #mainblock {
     background-color: rgb(221, 191, 151);
     text-align: center;
 }
 
-.header#main{
+.title#main{
     background-color: beige;
     font-size: 40px;
 }
 
-.header {
+.title {
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
@@ -20,7 +34,7 @@
 
 
 
-.subheader {
+.subtitle {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
