--- a/style.css
+++ b/style.css
@@ -1,53 +1,75 @@
 * {-webkit-font-smoothing: antialiased;}
 
 
+body {
+	margin: 0;
+	padding: 0;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	color: #003135;
+	background: #AFDDE5;
+}
+
+.main-header {
+    background-color: rgb(210, 210, 234);
+    color: white;
+}
+    .main-header #mainName  {
+        font-size: 20px;
+        font-weight: 300px;
+        display: inline-block;
+    }
+    .main-header p {
+        text-align: center;
+        width: min-content;
+        width: 200px;
+        border: 1px solid black;
+    }
+    
 
 .icons {
+    position: absolute;
+    top: 0px;
+    background-color: rgb(210, 210, 234); 
     width: 100px;
+    left: 88%;
     border: 1px solid black;
-    background-color: beige;
     color:darkolivegreen;
 }
-
-.icons img{
-    float: right;
-    clear:right;
-    text-align: center;
-}
+    .icons img{
+        float: right;
+        clear:right;
+        text-align: center;
+    }
 
 
 #mainblock {
-    background-color: rgb(221, 191, 151);
     text-align: center;
 }
 
-.title#main{
-    background-color: beige;
-    font-size: 40px;
-}
+
 
 .title {
     font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
 }
-
+    .title#main{
+        background-color: rgb(210, 210, 234);
+        color: #2F3C7E;
+        font-size: 40px;
+    }
 
 
 .subtitle {
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
 
 .mangaList {
     display: block;
     list-style: none;
-    background-color: antiquewhite;
 }
-
-
-.mangaList .mangaInList {
-    margin: 30px;
-    display: inline-block;
-}
+    .mangaList .mangaInList {
+        color: #003135;
+        margin: 30px;
+        display: inline-block;
+    }
