--- a/style.css
+++ b/style.css
@@ -3,15 +3,14 @@
 
 body {
 	margin: 0;
-	padding: 0;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	padding-left: 5px;
+    padding-right: 5px;
+	font-family: Georgia, 'Times New Roman', Times;
 	color: #003135;
-	background: white;
+	background: rgb(161, 161, 161);
 }
 
-h1 {
-    margin: 0px;
-}
+
 
 .main-header {
     background-color: black;
@@ -23,13 +22,12 @@ h1 {
         font-weight: 300px;
         display: inline-block;
         text-align: center;
-        color: wheat;
+        color: white;
     }
     .main-header p {
         text-align: center;
         width: min-content;
         width: 300px;
-        border: 1px solid black;
     }
     
 
@@ -61,8 +59,9 @@ h1 {
 }
     .title#main{
         background-color: black;
-        color: wheat;
+        color: white;
         font-size: 40px;
+        margin-top: 0px;
     }
 
 
