--- a/style.css
+++ b/style.css
@@ -7,61 +7,70 @@ body {
     padding-right: 5px;
 	font-family: Georgia, 'Times New Roman', Times;
 	color: #003135;
-	background: rgb(161, 161, 161);
+	background: rgb(255, 255, 255);
 }
 
 
 
 .main-header {
-    background-color: black;
+    display: flex;
+    background-color: rgb(0, 0, 41);
     color: white;
+    justify-content: space-between;
+    height: 75px;
+    align-items: center;
+    padding-left: 200px;
+    padding-right: 200px;
 }
+
+    .main-header .lefth {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .main-header #mainName  {
         font-size: 20px;
-        width: 300px;
+        width: 150px;
         font-weight: 300px;
-        display: inline-block;
         text-align: center;
         color: white;
     }
     .main-header p {
-        text-align: center;
-        width: min-content;
-        width: 300px;
+        width: max-content;        
     }
     
 
 .icons {
-    position: absolute;
-    top: 0px;
+    display: flex;
+    flex-direction: column;
     background-color: white; 
     width: 120px;
-    left: 86.5%;
     border: 1px solid black;
     color:white;
+    height: min-content;
+    list-style: none;
+    justify-content: center;
 }
-    .icons img{
-        float: right;
-        clear:right;
-        text-align: center;
-    }
 
+    .icons .icon {
+        display: flex;
+    }
     .icons a {
+        text-decoration: none;
         color: black;
     }
- 
-
-
 .title {
     text-align: center;
     font-weight: bold;
     font-size: 25px;
 }
     .title#main{
-        background-color: black;
+        background-color:black;
         color: white;
         font-size: 40px;
-        margin-top: 0px;
+        margin-top: 20px;
     }
 
 
@@ -71,7 +80,8 @@ body {
 }
 
 .mangaList {
-    display: block;
+    display: flex;
+    justify-content: center;
     list-style: none;
 }
     .mangaList .mangaInList {
