--- a/style.css
+++ b/style.css
@@ -2,19 +2,29 @@
 
 
 body {
+    display: flex;
+    flex-direction: column;
 	margin: 0;
 	padding-left: 5px;
     padding-right: 5px;
 	font-family: Georgia, 'Times New Roman', Times;
 	color: #003135;
 	background: rgb(255, 255, 255);
+    min-height: 100vh;  
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
 
+.main {
+    flex: 1;
+}
 
 .main-header {
     display: flex;
-    background-color: rgb(0, 0, 41);
+    background-color: rgb(2, 2, 96);
     color: white;
     justify-content: space-between;
     height: 75px;
@@ -22,7 +32,6 @@ body {
     padding-left: 200px;
     padding-right: 200px;
 }
-
     .main-header .lefth {
         height: auto;
         display: flex;
@@ -40,26 +49,19 @@ body {
     .main-header p {
         width: max-content;        
     }
-    
+
 
 .icons {
     display: flex;
-    flex-direction: column;
-    background-color: white; 
     width: 120px;
-    border: 1px solid black;
     color:white;
     height: min-content;
     list-style: none;
     justify-content: center;
+    gap: 30px;
 }
-
     .icons .icon {
         display: flex;
-    }
-    .icons a {
-        text-decoration: none;
-        color: black;
     }
 .title {
     text-align: center;
@@ -72,7 +74,6 @@ body {
         font-size: 40px;
         margin-top: 20px;
     }
-
 
 .subtitle {
     text-align: center;
@@ -88,4 +89,21 @@ body {
         color: #003135;
         margin: 30px;
         display: inline-block;
+    }
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(2, 2, 96);
+
+}
+    .footer ul {
+        color: white;
+        width: 100%;
+        display: flex;
+        list-style: none;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 200px;
+        padding-right: 200px;
     }
